--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewSearchFilterSortBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewSearchFilterSortBar.scss
@@ -162,8 +162,8 @@
 
 	.filter-area-container__content-dropdown {
 		position: absolute;
-
-		top: 52px;
+		// Additional 0.2px to fix border overflow in chrome and edge
+		top: 52.2px;
 		right: 30px;
 		border: 3px solid black;
 		border-radius: v.$search-top-bar-buttton-border-radius 0 v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius;
